# copick-torch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_COVERAGE_SETUP.md  README.md  README_updated_section.md  cleanup.sh  codecov.yml  github_workflows_template.yml  make_scripts_executable.sh  pyproject.toml  pytest.ini  release-please.config.json  setup.py
.github/: ci_post_test_example.yml
.github/workflows/: conventional-commits.yml  py-formatting.yml  release-please.yml  test.yml
copick_torch/: __init__.py  augmentations.py  cli.py  copick.py  data.py  dataset.py  dataset_append.py  log_setup.py  logging.py  minimal_dataset.py  monai_augmentations.py  parallel_utils.py  parallelization.py  preloaded_dataset.py  samplers.py  training.py  transforms.py
copick_torch/dataloaders/: __init__.py
copick_torch/datasets/: base.py  cached.py  zarr_dataset.py
copick_torch/detectors/: __init__.py  dog_detector.py  monai_detector.py
copick_torch/entry_points/: run_downsample.py  run_filter3d.py  run_membrane_seg.py  run_picks2slab.py  run_seg2slab.py  utils.py
copick_torch/filters/: bandpass.py  downsample.py
copick_torch/fitting/: __init__.py  slab_from_picks.py  slab_from_segmentation.py
copick_torch/inference/: membrain_seg.py
copick_torch/metrics/: __init__.py
copick_torch/nnunet/: __init__.py  mednext_trainer.py  predict.py  prepare.py  train.py  utils.py
copick_torch/segmentation/: picks_from_segmentation.py
copick_torch/tools/: create_db_index.py
copick_torch/utils/: extraction.py
docs/: README.md
docs/augmentation_examples/: README.md
docs/simple_dataset_examples/: README.md
examples/: balanced_training_with_mixup.py  czii_object_detection_training.json  dog_detector_example.py  fourier_augmentation_demo.py  monai_augmentation_demo.py  monai_detector_example.py  simple_inference.py  simple_training.py  spliced_mixup_example.py  spliced_mixup_fourier_example.py  visualize_dataset.py  visualize_dataset_enhanced.py
scripts/: __init__.py  ci_coverage_summary.py  ci_post_test.sh  coverage_report.py  create_particle_dataset.py  generate_augmentation_docs.py  generate_dataset_examples.py  generate_simple_dataset_docs.py  info_torch_dataset.py  load_particle_dataset.py  save_torch_dataset.py
tests/: setup_test_env.py  test_augmentations.py  test_background_sampling.py  test_copick_data_portal_distribution.py  test_copick_dataset.py  test_dataset.py  test_dataset_caching.py  test_dataset_examples.py  test_dataset_extraction.py  test_dog_detector.py  test_flag_normalization.py  test_integration.py  test_logging.py  test_metrics.py  test_minimal_dataset.py  test_monai_augmentations.py  test_monai_detector.py  test_run_names_option.py  test_samplers.py  test_simple_dataset.py  test_simple_dataset_docs.py  test_slab_fitting.py  test_spliced_mixup_dataset.py
