[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copick-torch"
version = "0.0.1"
description = "Copick Torch Integration"
dependencies = [
    "torch",
    "monai",
    "dask",
    "einops",
    "h5py",
    "copick-utils",
    "numpy",
    "rich",
    "scikit-image",
    "scipy",
    "mrcfile",
    "gdown",
    "membrain-seg",
    "copick>=1.0.1",
    "numcodecs<0.16.0",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "pyarrow>=19.0.1",
    "pytest>=8.3.5",
    "scikit-learn>=1.6.1",
    "torchvision>=0.21.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
coverage-report = "scripts.coverage_report:main"

[project.entry-points."copick.process.commands"]
downsample = "copick_torch.entry_points.run_downsample:downsample"

[project.entry-points."copick.inference.commands"]
membrain-seg = "copick_torch.entry_points.run_membrane_seg:membrain_seg"

[tool.hatch.metadata]
allow-direct-references = true
dependency-overrides = [
    "numpy>=2"  # or whatever version you need
]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

